--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
 
     <section class="my-12">
       <h2 class="text-xl font-semibold mb-4 text-center">公式SNSリンク</h2>
-      <div class="flex justify-center gap-6">
+      <div class="flex flex-wrap justify-center gap-4">
         <a
           href="https://x.com/vcborn_support"
           target="_blank"
