--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VCborn</title>
     <link href="./styles/output.css" rel="stylesheet" />
+    <meta property="og:image" content="https://vcborn.com/images/ogp.jpg" />
+    <meta property="og:title" content="VCborn" />
+    <meta
+      property="og:description"
+      content="VCbornは2025年1月22日をもって活動を終了しました。"
+    />
   </head>
   <body class="bg-gray-100 text-gray-800">
     <!-- ヘッダー -->
